[iman] update content